    * Fixed bug in attrString that disabled bold
    * Fixed bug in DECRC/DECSC
    * Fixed bug in character set settings
    
2003-01-21	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Refactored toolbar item popup menu to enable it in 
      text only mode.
      
    * Fixed bug in PseudoTerminal: -saveSession where 
      row and column values were swapped.
      

2003-01-20	fabian
    * New option in preference&address book entry
      Treat NonASCII characters as double width
    * Graphical characters now works for VT100 font
    * Fixed a bug in function key code
    * New SetASCIIString() to process ascii strings and
      old SetString() to handle other(multibytes) strings
    * Cleaned up code in VT100Screen.m
    * bug fixes in SetDoubleString
      
2003-01-20	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Enabling WRAPAROUND_MODE in VT100Terminal by default 
      for long command lines.
      
    * Added support for ANSI "Cursor Horizontal Absolute".
      
2003-01-17	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added support to specify text highlight/selection color 
      in preferences, session settings, and address book.
      

2003-01-16	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed common bugs in insertLines, scrollDown in 
      VT100Screen.

2003-01-15	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Removed adjustScroll override in PTYTextView.
      Not needed anymore and was conflicting with 
      scrolling in vi.
      

2003-01-14	fabian
    * Enhanced save session
    * Fixed insert mode bug
    * Fixed wrap around mode
    * Failed attempt to set up mouse cursor
    
2003-01-14	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed bug where adding a second tab would cause 
      the scroll position of the first tab to be reset.
      
    * Added option to silence terminal bell.
      

2002-01-13	fabian
    * Version number is now 0.6.2
    * New command in Tools menu: Save Config
    * Add Hide-Tab as an option